# BCA-Phantom

./: .gitignore  CHANGELOG.md  README.md  build.py  pyproject.toml  requirements.txt
src/: build.py  ca.pem  certificates.sh  client.py  generate_certificates.sh  generate_certs.sh  phantom.py  run_client.py  run_server.py  server.pem  server.py  shell.cfg
src/client/: client.py  commands.py
src/server/: handler.py  routes.py  server.py
