[tool.poetry]
name = "basic-http-reverse-shell"
version = "0.1.0"
description = ""
authors = ["EONRaider <livewire_voodoo@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
trustme = "^0.9.0"
pyinstaller = "^4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
